src/objects/brPhoneSupportList__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>brPhone Support List</label>
</CustomObject>